@@ -54,9 +54,9 @@ namespace miosix {
 /// Choose scheduler type
 /// Uncomment one #define only
 
-#define SCHED_TYPE_PRIORITY
+//#define SCHED_TYPE_PRIORITY
 //#define SCHED_TYPE_CONTROL_BASED
-//#define SCHED_TYPE_EDF
+#define SCHED_TYPE_EDF
 
 //
 //Options specific to the control scheduler
